--- a/assets/css/templates/_icons.scss
+++ b/assets/css/templates/_icons.scss
@@ -3,12 +3,12 @@ $css-version: random(999999999999999);
 
 @font-face {
 	font-family: "<%= fontName %>";
-	src: url('<%= fontPath %><%= fontName %>.eot?#' + $css-version);
-	src: url('<%= fontPath %><%= fontName %>.eot?#iefix?#' + $css-version) format('eot'),
-		url('<%= fontPath %><%= fontName %>.woff2?#' + $css-version) format('woff2'),
-		url('<%= fontPath %><%= fontName %>.woff?#' + $css-version) format('woff'),
-		url('<%= fontPath %><%= fontName %>.ttf?#' + $css-version) format('truetype'),
-		url('<%= fontPath %><%= fontName %>.svg#<%= fontName %>?#' + $css-version) format('svg');
+	src: url('<%= fontPath %><%= fontName %>.eot');
+	src: url('<%= fontPath %><%= fontName %>.eot?#iefix') format('eot'),
+		url('<%= fontPath %><%= fontName %>.woff2') format('woff2'),
+		url('<%= fontPath %><%= fontName %>.woff') format('woff'),
+		url('<%= fontPath %><%= fontName %>.ttf') format('truetype'),
+		url('<%= fontPath %><%= fontName %>.svg#<%= fontName %>') format('svg');
 }
 
 @mixin <%= cssClass%>-styles {
@@ -31,7 +31,7 @@ $css-version: random(999999999999999);
 	$char: "";
 <% _.each(glyphs, function(glyph) { %>
 	@if $filename == <%= glyph.fileName %> {
-		$char: "\<%= glyph.codePoint %>";
+		$char: "" + "/" + <%= glyph.codePoint %> + "";
 	}<% }); %>
 
 	@return $char;
